--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 timezone:    Europe/Berlin
-future:      false
+future:      true
 # Set baseurl to the base path of the site eg "/mytalk"
 # baseurl:     "/github-slideshow"
 # The allowed values are 'rouge', 'pygments' or null.
@@ -42,7 +42,7 @@ slideNumber:
 ## Note that the new default vertical centering option will break compatibility with slides that were using transitions with backgrounds ("cube" and "page"). To restore the previous behavior, set "center" to "false".
 reveal:
   ## Display controls in the bottom right corner
-  controls: false
+  controls: true
   ## Display a presentation progress bar
   progress: true
   ## Display the page number of the current slide
